fix: z-index dropdown - funcion para remover show

--- a/src/css/components/dropDown.css
+++ b/src/css/components/dropDown.css
@@ -10,6 +10,7 @@
     visibility: hidden;
     opacity: 0;
     transition: .3s;
+    z-index: 11;
 
 }
 .dropDownMenu.show{
